--- a/Videos.html
+++ b/Videos.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Tim Boite 3.0 | Videos</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="icon" href="Logo.png">
 </head>
 <body>
     <h1>Tim Boite 3.0</h1>
@@ -11,12 +12,13 @@
 
 <p><a href="index.html">Home | About</a></p>
 <p><a href="Videos.html">Videos</a></p> 
+<p><a href="store.html">The store</a></p>
     
-    <a href="https://www.youtube.com/watch?v=xsEvJ6S0dXo&t=1s"><img src="Images/Fv.png"><a href="https://www.youtube.com/watch?v=pmDWARB_oSE&t=13s"><img src="Images/mqdefault_6s.png"><a href="https://www.youtube.com/watch?v=9JfwgdxNW_I&t=26s"><img src="Images/mqdefault_7s.png"></a><a href="https://www.youtube.com/watch?v=Vr0UU_6S2kM"><img src="Images/mqdefault_8s.png"></a>
-    <p><a href="https://www.youtube.com/watch?v=tD23Mcwf45o"><img src="Images/mqdefault_9s.png"></a><a href="https://www.youtube.com/watch?v=maiZVKIE6ew&t=6s"><img src="Images/mqdefault_10s.png"></a><a href="https://www.youtube.com/watch?v=ZeZyPI6fH-M&t=3s"><img src="Images/mqdefault_11s.png"></a><a href="https://www.youtube.com/watch?v=EYwiXT2fihI"><img src="Images/mqdefault_12s.png"></a></p>
-    <p><a href="https://www.youtube.com/watch?v=Ha7YtPNPSSo"><img src="Images/mqdefault_13s.png"></a><a href="https://www.youtube.com/watch?v=tOQkh37e-qw"><img src="Images/mqdefault_14s.png"></a><a href="https://www.youtube.com/watch?v=XxyjsHVIIt4&t=352s"><img src="Images/mqdefault_15s.png"></a><a href="https://www.youtube.com/watch?v=RxZi4qQ0D8U"><img src="Images/mqdefault_16.png"></a></p>
-    <p><a href="https://www.youtube.com/watch?v=E6G9K-naVoc"><img src="Images/mqdefault_17.png"></a><a href="https://www.youtube.com/watch?v=cnncj4dgtUQ"><img src="Images/mqdefault_18s.png"></a><a href="https://www.youtube.com/watch?v=qZwkU5KXu3o"><img src="Images/Img.src.png"></a><a href="https://www.youtube.com/watch?v=lo4V8uDDaF4"><img src="Images/hqdefault.png"></a></p>
-    <p><a href="https://www.youtube.com/watch?v=QsmrqTjwaHo"><img src="Images/mqdefault_19s.png"></a></p>
+    <a href="https://www.youtube.com/watch?v=xsEvJ6S0dXo&t=1s"><img src="Fv.png"><a href="https://www.youtube.com/watch?v=pmDWARB_oSE&t=13s"><img src="mqdefault_6s.png"><a href="https://www.youtube.com/watch?v=9JfwgdxNW_I&t=26s"><img src="mqdefault_7s.png"></a><a href="https://www.youtube.com/watch?v=Vr0UU_6S2kM"><img src="mqdefault_8s.png"></a>
+    <p><a href="https://www.youtube.com/watch?v=tD23Mcwf45o"><img src="mqdefault_9s.png"></a><a href="https://www.youtube.com/watch?v=maiZVKIE6ew&t=6s"><img src="mqdefault_10s.png"></a><a href="https://www.youtube.com/watch?v=ZeZyPI6fH-M&t=3s"><img src="mqdefault_11s.png"></a><a href="https://www.youtube.com/watch?v=EYwiXT2fihI"><img src="mqdefault_12s.png"></a></p>
+    <p><a href="https://www.youtube.com/watch?v=tOQkh37e-qw"><img src="mqdefault_14s.png"></a><a href="https://www.youtube.com/watch?v=qZwkU5KXu3o"><img src="Img.src.png"></a><a href="https://www.youtube.com/watch?v=cnncj4dgtUQ"><img src="mqdefault_18s.png"><a href="https://www.youtube.com/watch?v=E6G9K-naVoc"><img src="mqdefault_17.png"></a><a href="https://www.youtube.com/watch?v=XxyjsHVIIt4&t=352s"><img src="mqdefault_15s.png"></a><a href="https://www.youtube.com/watch?v=RxZi4qQ0D8U"><img src="mqdefault_16.png"></a></p>
+    <p><a href="https://www.youtube.com/watch?v=QsmrqTjwaHo"><img src="mqdefault_19s.png"></a><a href="https://www.youtube.com/watch?v=lo4V8uDDaF4"><img src="hqdefault.png"></a><a href="https://www.youtube.com/watch?v=kmMT3FsrCJU&t=89s"><img src="speedrun1.png"></a><a href="https://www.youtube.com/watch?v=qs-cNj2X_jE"><img src="speedrun2.png"></a><a href="https://www.youtube.com/watch?v=Ju59HDtsKOI&t=211s"><img src=""></a></p>
+    <p><a href="https://www.youtube.com/watch?v=Ju59HDtsKOI&t=211s"><img src="mqdefault_20s.png"></a></p>
     
 </body>
 </html>
