--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="utf-8"> 
    <title>Tim Boite 3.0 | Home | About</title>
    <link rel="stylesheet" href="styles.css">
+   <link rel="icon" href="Logo.png">
 </head>
 <body>
 <h1>Tim Boite 3.0</h1>
@@ -11,15 +12,18 @@
 
 <p><a href="index.html">Home | About</a></p>
 <p><a href="Videos.html">Videos</a></p>
+<p><a href="store.html">The store</a></p>
 
 <p>I am a youtuber.</p>
-<p><a href="https://www.youtube.com/channel/UCguHbi7Fo4Fvnc15FYxhASw"><img src="Images/Logo.png"></a></p>
+<p><a href="https://www.youtube.com/channel/UCguHbi7Fo4Fvnc15FYxhASw"><img src="Logo.png"></a></p>
 <p>Who Started in 2022 if you are in the future.</p>
 <p>As well as this WEBSITE!</p>
 <p>Obviously, if you saw the website or watched the episodes.</p>
-<p> You now I want a game called <b>"Half-Life"</b>.</p>
-<p><a href="https://store.steampowered.com/app/70/HalfLife/"><img src="Images/0000002351.600x338.png"></a></p>
-<p>Please make sure to like and subscribe on my youtube channel.<p><img src="Images/Subscribe.png"></p></p>
-<p>Videos of the creation of the websites.</p><p><a href="https://www.youtube.com/watch?v=XxyjsHVIIt4&t=353s"><img src="Images/mqdefault_15s.png"></a><a href="https://www.youtube.com/watch?v=lo4V8uDDaF4"><img src="Images/hqdefault.png"></a><a href="https://www.youtube.com/watch?v=QsmrqTjwaHo"><img src="Images/mqdefault_19s.png"></a></p>
+<p> You know I want a game called <b>"Half-Life"</b>.</p>
+<p>(Future Tim Boi has Half-Life in a bundle he got on steam.)</p>
+<p>But, I got it in a bundle</p>
+<p><a href="https://store.steampowered.com/app/70/HalfLife/"><img src="0000002351.600x338.png"></a></p>
+<p>Please make sure to like and subscribe on my youtube channel.<p><img src="Subscribe.png"></p></p>
+<p>Videos of the creation of the websites.</p><p><a href="https://www.youtube.com/watch?v=XxyjsHVIIt4&t=353s"><img src="mqdefault_15s.png"></a><a href="https://www.youtube.com/watch?v=lo4V8uDDaF4"><img src="hqdefault.png"></a><a href="https://www.youtube.com/watch?v=QsmrqTjwaHo"><img src="mqdefault_19s.png"></a></p>
 </body>
 </html>
