--- a/store.html
+++ b/store.html
@@ -14,6 +14,7 @@
 <p><a href="Videos.html">Videos</a></p>
 <p><a href="store.html">The store</a></p>
 
-<p><a download="Tim_Bois_Media_Player.zip" href="Tim_Bois_Media_Player.zip"><p><img src="The_Media_Player_OzWQdIaq8q.png"></p><p><img src="The_Media_Player_ia0nfj6du2.png"></p><p>Tim Boi's Media Player</a></p>
+<p><img src="The_Media_Player_OzWQdIaq8q.png"></p><p><img src="The_Media_Player_ia0nfj6du2.png"></p>
+<p><a download="Tim_Bois_Media_Player.zip" href="Tim_Bois_Media_Player.zip"><p>Tim Boi's Media Player</a></p>
 </body>
 </html>
