--- a/store.html
+++ b/store.html
@@ -14,7 +14,11 @@
 <p><a href="Videos.html">Videos</a></p>
 <p><a href="store.html">The store</a></p>
 
-<p><img src="The_Media_Player_OzWQdIaq8q.png"></p><p><img src="The_Media_Player_ia0nfj6du2.png"></p>
+<br><p><img src="The_Media_Player_OzWQdIaq8q.png"><img src="The_Media_Player_ia0nfj6du2.png"></p></br>
 <p><a download="Tim_Bois_Media_Player.zip" href="Tim_Bois_Media_Player.zip"><p>Tim Boi's Media Player</a></p>
+
+<p><img src="Tim_Bois_NotePad_aHwqhRO2j3.png"><img src="Tim_Bois_NotePad_kBcD7gxkyB.png"></p>
+<p><a download="Tim_Bois_NotePad.zip" href="Tim_Bois_NotePad.zip">Tim Boi's NotePad</a></p>
+
 </body>
 </html>
