--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="icon" href="Logo.png">
 </head>
 <body>
-<h1>Tim Boite 3.0</h1>
+<h1>Tim Boite v3.3</h1>
 <h3>Tim boi's web page</h3>
 
 <p><a href="index.html">Home | About</a></p>
@@ -25,5 +25,12 @@
 <p><a href="https://store.steampowered.com/app/70/HalfLife/"><img src="0000002351.600x338.png"></a></p>
 <p>Please make sure to like and subscribe on my youtube channel.<p><img src="Subscribe.png"></p></p>
 <p>Videos of the creation of the websites.</p><p><a href="https://www.youtube.com/watch?v=XxyjsHVIIt4&t=353s"><img src="mqdefault_15s.png"></a><a href="https://www.youtube.com/watch?v=lo4V8uDDaF4"><img src="hqdefault.png"></a><a href="https://www.youtube.com/watch?v=QsmrqTjwaHo"><img src="mqdefault_19s.png"></a></p>
+
+
+
+
+
+
+<p><h6>A Youtuber's Dream 2022-2022</h6></p>
 </body>
 </html>
