--- a/store.html
+++ b/store.html
@@ -7,7 +7,7 @@
    <link rel="icon" href="Logo.png">
 </head>
 <body>
-<h1>Tim Boite 3.0</h1>
+<h1>Tim Boite v3.3</h1>
 <h3>Tim boi's web page</h3>
 
 <p><a href="index.html">Home | About</a></p>
@@ -19,6 +19,14 @@
 
 <p><img src="Tim_Bois_NotePad_aHwqhRO2j3.png"><img src="Tim_Bois_NotePad_kBcD7gxkyB.png"></p>
 <p><a download="Tim_Bois_NotePad.zip" href="Tim_Bois_NotePad.zip">Tim Boi's NotePad</a></p>
+
+
+
+
+
+
+
+<p><h6>A Youtuber's Dream 2022-2022</h6></p>
 
 </body>
 </html>
