--- a/store.html
+++ b/store.html
@@ -20,8 +20,8 @@
 <p><img src="Tim_Bois_NotePad_aHwqhRO2j3.png"><img src="Tim_Bois_NotePad_kBcD7gxkyB.png"></p>
 <p><a download="Tim_Bois_NotePad.zip" href="Tim_Bois_NotePad.zip">Tim Boi's NotePad</a></p>
 
-
-
+<p><img src="Tim_Bois_Paints_afFSDya3DF.png"><img src="Tim_Bois_Paints_CoPrsT7aJJ.png"></p>
+<p><a download="Tim_Bois_Paints.zip" href="Tim_Bois_ Paints.zip">Tim Boi's Paints(Only for Windows 10,11, and probably more OS)</a></p>
 
 
 
