--- a/logo.html
+++ b/logo.html
@@ -1,1 +1,13 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+   <meta charset="utf-8"> 
+   <title>Tim Boite 3.0 | Home | About</title>
+   <link rel="stylesheet" href="styles.css">
+   <link rel="icon" href="Logo.png">
+</head>
+<body>
+<img src="Logo.png">
+</body>
+</html>
