--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <p><a href="index.html">Home | About</a></p>
 <p><a href="Videos.html">Videos</a></p>
 <p><a href="store.html">The store</a></p>
-
+<p><a href="logo.html">The Logo</a></p>
+   
 <p>I am a youtuber.</p>
 <p><a href="https://www.youtube.com/channel/UCguHbi7Fo4Fvnc15FYxhASw"><img src="Logo.png"></a></p>
 <p>Who Started in 2022 if you are in the future.</p>
@@ -33,4 +34,5 @@
 
 <p><h6>A Youtuber's Dream 2022-2022</h6></p>
 </body>
+
 </html>
